packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_qwik_conflict.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 1237
expression: output
---
==INPUT==


import { $, component$, useStyles } from '@builder.io/qwik';
import { qrl } from '@builder.io/qwik/what';

export const hW = 12;
export const handleWatch = 42;

const componentQrl = () => console.log('not this', qrl());

componentQrl();
export const Foo = component$(() => {
	useStyles$('thing');
	const qwik = hW + handleWatch;
	console.log(qwik);
	const qrl = 23;
	return (
		<div onClick$={()=> console.log(qrl)}/>
	)
}, {
	tagName: "my-foo",
});

export const Root = component$(() => {
	useStyles($('thing'));
	return $(() => {
		return (
			<div/>
		)
	});
}, {
	tagName: "my-foo",
});

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
import { qrl as qrl1 } from '@builder.io/qwik/what';
export const hW = 12;
export const handleWatch = 42;
const componentQrl1 = ()=>console.log('not this', qrl1());
componentQrl1();
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./foo_component_htdrsvublie"), "Foo_component_HTDRsvUbLiE"), {
    tagName: "my-foo"
});
export const Root = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./root_component_royhjyacbye"), "Root_component_royhjYaCbYE"), {
    tagName: "my-foo"
});


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAEA,SAAS,OAAA,IAAG,QAAQ,wBAAwB;AAE5C,OAAO,MAAM,KAAK,GAAG;AACrB,OAAO,MAAM,cAAc,GAAG;AAE9B,MAAM,gBAAe,IAAM,QAAQ,GAAG,CAAC,YAAY;AAEnD;AACA,OAAO,MAAM,oBAAM,wGAQhB;IACF,SAAS;AACV,GAAG;AAEH,OAAO,MAAM,qBAAO,0GAOjB;IACF,SAAS;AACV,GAAG\"}")
============================= foo_component_htdrsvublie.js (ENTRY POINT)==

import { _jsxSorted } from "@builder.io/qwik";
import { hW } from "./test";
import { handleWatch } from "./test";
import { qrl } from "@builder.io/qwik";
export const Foo_component_HTDRsvUbLiE = ()=>{
    useStyles$('thing');
    const qwik = hW + handleWatch;
    console.log(qwik);
    return /*#__PURE__*/ _jsxSorted("div", null, {
        onClick$: /*#__PURE__*/ qrl(()=>import("./foo_component_div_onclick_m48dyiidsjw"), "Foo_component_div_onClick_M48DYiidSJw")
    }, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;yCAU8B;IAC7B,WAAW;IACX,MAAM,OAAO,KAAK;IAClB,QAAQ,GAAG,CAAC;IAEZ,qBACC,WAAC;QAAI,QAAQ;;AAEf\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "foo_component_htdrsvublie",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    269,
    424
  ]
}
*/
============================= root_component_usestyles_u5dkuxgrgnu.js (ENTRY POINT)==

export const Root_component_useStyles_u5DkUxGrGnU = 'thing';
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"oDAuBa\"}")
/*
{
  "origin": "test.tsx",
  "name": "Root_component_useStyles_u5DkUxGrGnU",
  "entry": null,
  "displayName": "Root_component_useStyles",
  "hash": "u5DkUxGrGnU",
  "canonicalFilename": "root_component_usestyles_u5dkuxgrgnu",
  "path": "",
  "extension": "js",
  "parent": "Root_component_royhjYaCbYE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    505,
    512
  ]
}
*/
============================= root_component_royhjyacbye.js (ENTRY POINT)==

import { qrl } from "@builder.io/qwik";
import { useStyles } from "@builder.io/qwik";
export const Root_component_royhjYaCbYE = ()=>{
    useStyles(/*#__PURE__*/ qrl(()=>import("./root_component_usestyles_u5dkuxgrgnu"), "Root_component_useStyles_u5DkUxGrGnU"));
    return /*#__PURE__*/ qrl(()=>import("./root_component_1_cbpqnyduhi4"), "Root_component_1_cBpQNYDUHI4");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;0CAsB+B;IAC9B;IACA;AAKD\"}")
/*
{
  "origin": "test.tsx",
  "name": "Root_component_royhjYaCbYE",
  "entry": null,
  "displayName": "Root_component",
  "hash": "royhjYaCbYE",
  "canonicalFilename": "root_component_royhjyacbye",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    484,
    565
  ]
}
*/
============================= root_component_1_cbpqnyduhi4.js (ENTRY POINT)==

import { _jsxSorted } from "@builder.io/qwik";
export const Root_component_1_cBpQNYDUHI4 = ()=>{
    return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, "u6_1");
};
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";4CAwBU;IACR,qBACC,WAAC;AAEH\"}")
/*
{
  "origin": "test.tsx",
  "name": "Root_component_1_cBpQNYDUHI4",
  "entry": null,
  "displayName": "Root_component_1",
  "hash": "cBpQNYDUHI4",
  "canonicalFilename": "root_component_1_cbpqnyduhi4",
  "path": "",
  "extension": "js",
  "parent": "Root_component_royhjYaCbYE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    526,
    561
  ]
}
*/
============================= foo_component_div_onclick_m48dyiidsjw.js (ENTRY POINT)==

export const Foo_component_div_onClick_M48DYiidSJw = ()=>console.log(23);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"qDAgBiB,IAAK,QAAQ,GAAG,CAFpB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_onClick_M48DYiidSJw",
  "entry": null,
  "displayName": "Foo_component_div_onClick",
  "hash": "M48DYiidSJw",
  "canonicalFilename": "foo_component_div_onclick_m48dyiidsjw",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    395,
    416
  ]
}
*/
== DIAGNOSTICS ==

[]
