packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_reg_ctx_name_segments.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 865
expression: output
---
==INPUT==


import { $, component$, server$ } from '@builder.io/qwik';
import { foo } from './foo';
export const Works = component$((props) => {
	const text = 'hola';
	return (
		<>
		<div onClick$={server$(() => console.log('in server', text))}></div>
		<div onClick$={() => foo()}></div>
		</>
	);
});

============================= test.js ==

import "./foo";
import { componentQrl } from "@builder.io/qwik";
import { serverQrl } from "@builder.io/qwik";
import { _regSymbol } from "@builder.io/qwik";
import { inlinedQrl } from "@builder.io/qwik";
import { _jsxSorted } from "@builder.io/qwik";
import { _noopQrl } from "@builder.io/qwik";
import { Fragment as _Fragment } from "@builder.io/qwik/jsx-runtime";
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("div", {
            onClick$: serverQrl(/*#__PURE__*/ inlinedQrl(/*#__PURE__*/ _regSymbol(()=>console.log('in server', 'hola'), "gcSPFNpGYgg"), "Works_component_Fragment_div_onClick_server_gcSPFNpGYgg"))
        }, null, null, 2, null),
        /*#__PURE__*/ _jsxSorted("div", null, {
            onClick$: /*#__PURE__*/ _noopQrl("Works_component_Fragment_div_onClick_nO4DPVZWP7g")
        }, null, 3, null)
    ], 1, "u6_0");
}, "Works_component_t45qL4vNGv0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;AAGA,OAAO,MAAM,sBAAQ,sCAAW,CAAC;IAEhC,qBACC;sBACA,WAAC;YAAI,UAAU,4DAAQ,IAAM,QAAQ,GAAG,CAAC,aAH7B;;sBAIZ,WAAC;YAAI,QAAQ;;;AAGf,mCAAG\"}")
== DIAGNOSTICS ==

[]
