packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_reg_ctx_name_segments_hoisted.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 912
expression: output
---
==INPUT==


import { $, component$, server$, useStyle$ } from '@builder.io/qwik';

export const Works = component$((props) => {
	useStyle$(STYLES);
	const text = 'hola';
	return (
		<div onClick$={server$(() => console.log('in server', text))}></div>
	);
});

const STYLES = '.class {}';

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { useStyleQrl } from "@builder.io/qwik";
import { inlinedQrl } from "@builder.io/qwik";
import { serverQrl } from "@builder.io/qwik";
import { _regSymbol } from "@builder.io/qwik";
import { _jsxSorted } from "@builder.io/qwik";
const Works_component_div_onClick_server_OsNoEFc5SM4 = /*#__PURE__*/ _regSymbol(()=>console.log('in server', 'hola'), "OsNoEFc5SM4");
const Works_component_t45qL4vNGv0 = (props)=>{
    useStyleQrl(/*#__PURE__*/ inlinedQrl(STYLES, "Works_component_useStyle_i40UL9JyQpg"));
    return /*#__PURE__*/ _jsxSorted("div", {
        onClick$: serverQrl(/*#__PURE__*/ inlinedQrl(Works_component_div_onClick_server_OsNoEFc5SM4, "Works_component_div_onClick_server_OsNoEFc5SM4"))
    }, null, null, 2, "u6_0");
};
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(Works_component_t45qL4vNGv0, "Works_component_t45qL4vNGv0"));
const STYLES = '.class {}';
export { STYLES as _auto_STYLES };


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;gFAOyB,IAAM,QAAQ,GAAG,CAAC,aAF7B;oCAFkB,CAAC;IAChC,qCAAU;IAEV,qBACC,WAAC;QAAI,UAAU;;AAEjB;AANA,OAAO,MAAM,sBAAQ,mGAMlB;AAEH,MAAM,SAAS\"}")
== DIAGNOSTICS ==

[]
